--- a/sfi/ChangeLog
+++ b/sfi/ChangeLog
@@ -1,3 +1,13 @@
+Wed May  5 16:37:26 2004  Tim Janik  <timj@gtk.org>
+
+	* sfilog.[hc]: rewrite of the logging/debugging system.
+	debugging messages still need a key, diagnostics and
+	simple messages are as easy as printf() to sdterr and
+	everything else requires log context information for
+	message configuration.
+
+	* *.c: adapted log, error, warning and debugging messages.
+
 Mon May  3 20:00:52 2004  Tim Janik  <timj@gtk.org>
 
 	* sficomwire.c (sfi_com_spawn_async): set child_pid to 0 upon failure.
