--- a/bse/ChangeLog
+++ b/bse/ChangeLog
@@ -1,3 +1,11 @@
+Wed May  5 15:27:08 2004  Tim Janik  <timj@gtk.org>
+
+	* *.c: adapted log, error, warning and debugging messages.
+
+	* bseenums.h: adapt message types to new logging system.
+
+	* bsemain.c: added support for $BSE_NO_DEBUG and --bse-no-debug.
+
 Sun May  2 14:50:25 2004  Tim Janik  <timj@gtk.org>
 
 	* gslopmaster.c: clean up debugging code, minor ops.
