--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,19 @@
+Wed May  5 15:19:46 2004  Tim Janik  <timj@gtk.org>
+
+	* beast-gtk/Makefile.am: grep for new debugging statements
+	sfi_debug() and sfi_debug_check().
+
+	* beast-gtk/bstmain.c: adapt to new debugging code.
+	install log message dialog handler.
+	support $BST_NO_DEBUG, $BEAST_NO_DEBUG and --no-debug.
+
+	* beast-gtk/bstusermessage.c: adapt to BSE message type
+	changes. provide log message handler for new debug system.
+
+	* beast-gtk/icons/diag.*: new diagnostics dialog icon.
+
+	* *.c: adapted log, error, warning and debugging messages.
+
 Sun May  2 19:59:39 2004  Tim Janik  <timj@gtk.org>
 
 	* beast-gtk/bstmain.c: support --print-dir=prefix option.
