Updated and revised Portuguese translation.
2004-05-06  Duarte Loreto <happyguy_pt@hotmail.com>

	* pt.po: Updated and revised Portuguese translation.

svn path=/trunk/; revision=2159

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2004-05-06  Duarte Loreto <happyguy_pt@hotmail.com>
+
+	* pt.po: Updated and revised Portuguese translation.
+
 Thu Apr 29 21:36:47 2004  Tim Janik  <timj@gtk.org>
 
 	* ru.po: translation updates from Alexandre Prokoudine.
