--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2004-05-06  Miloslav Trmac  <mitr@volny.cz>
+
+	* cs.po: Updated Czech translation.
+
 2004-05-06  Duarte Loreto <happyguy_pt@hotmail.com>
 
 	* pt.po: Updated and revised Portuguese translation.
