--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Sat May  8 10:19:01 2004  Tim Janik  <timj@gtk.org>
+
+	* docs/site-links-synthesis.texi: link list update.
+
 Wed May  5 18:16:11 2004  Tim Janik  <timj@gtk.org>
 
 	* beast-gtk/bstmain.c (bst_early_parse_args): fixed parsing bug.
