--- a/docs/site-news.texi
+++ b/docs/site-news.texi
@@ -18,7 +18,8 @@
 @item Email:
 @tab	@uref{http://mail.gnome.org/mailman/listinfo/beast/,, Mailing List} and @uref{http://mail.gnome.org/archives/beast/,, Archive}
 @item Feedback:
-@tab	Wiki @uref{http://beast.gtk.org/wiki.php?id=Discussion,,Discussion} page
+@tab	Wiki 	@uref{http://beast.gtk.org/wiki.php?id=Discussion,,Discussion} and
+		@uref{http://beast.gtk.org/wiki.php?id=HelpDesk,,HelpDesk} pages
 @end multitable
 
 
