--- a/plugins/ChangeLog
+++ b/plugins/ChangeLog
@@ -1,3 +1,9 @@
+Thu May 20 14:09:39 2004  Tim Janik  <timj@gtk.org>
+
+	* icons/sub.c: save pixstream instead of pixdata parts.
+
+	* bseadder.c: construct icon from sub_pixstream instead of pixdata.
+
 Sat Mar  6 12:36:16 2004  Tim Janik  <timj@gtk.org>
 
 	* bsenoise.c: use gsl_engine_block_size() instead of outdated
