--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Thu May 20 14:25:03 2004  Tim Janik  <timj@gtk.org>
+
+	* configure.in: changed version to 0.6.2-rc1, iface 0, binary 0.
+
 Sat May  8 10:19:01 2004  Tim Janik  <timj@gtk.org>
 
 	* docs/site-links-synthesis.texi: link list update.
